--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Itelios at GitHub by Itelios</title>
+    <title>Itelios at GitHub</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>Itelios at GitHub</h1>
-          <h2>itelios, open source, github, leapmotion</h2>
+          <img src="images/itelios.png"></img>
+          <h2>Itelios at GitHub</h2>
         </header>
 
         <section id="downloads" class="clearfix">
