Setting project title to bold

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <p>Feel free to clone and use our project : </p>
 
 <ul>
-<li>iLeapLib - a simple objective-c library which use LeapMotion websocket server.</li>
-<li>LeapMotion-Proxy - a  simple proxy to allow the diffusion of LeapMotion websocket message's to another port and another IP than <code>localhost</code>
+<li><b>iLeapLib</b> - a simple objective-c library which use LeapMotion websocket server.</li>
+<li><b>LeapMotion-Proxy</b> - a  simple proxy to allow the diffusion of LeapMotion websocket message's to another port and another IP than <code>localhost</code>
 </li>
-<li>LeapPong - a simple 2D Game using LeapMotion</li>
+<li><b>LeapPong</b> - a simple 2D Game using LeapMotion</li>
 </ul>
         </section>
 
