--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <p>Feel free to clone and use our project : </p>
 
 <ul>
-<li><strong>iLeapLib</strong> - a simple objective-c library which use LeapMotion websocket server.</li>
-<li><strong>LeapMotion-Proxy</strong> - a  simple proxy to allow the diffusion of LeapMotion websocket message's to another port and another IP than <code>localhost</code>
-</li>
-<li><strong>LeapPong</strong> - a simple 2D Game using LeapMotion</li>
+<li><a href="https://github.com/Itelios/ileaplib"><strong>iLeapLib</strong> - a simple objective-c library which use LeapMotion websocket server.</a></li>
+<li><a href="https://github.com/Itelios/leapmotion-proxy"><strong>LeapMotion-Proxy</strong> - a  simple proxy to allow the diffusion of LeapMotion websocket message's to another port and another IP than <code>localhost</code>
+</a></li>
+<li><a href="https://github.com/Itelios/leappong"><strong>LeapPong</strong> - a simple 2D Game using LeapMotion</a></li>
 </ul>
         </section>
 
